Update ktor version; move to gradle